<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/main_device_info">

        <Preference
            android:title="@string/main_device"
            android:icon="@drawable/device"
            android:key="device_view" />

        <Preference
            android:title="@string/main_rom"
            android:icon="@drawable/hammer"
            android:key="rom_view" />

        <Preference
            android:title="@string/main_version"
            android:icon="@drawable/version"
            android:key="version_view" />

        <Preference
            android:title="@string/main_build"
            android:icon="@drawable/key"
            android:key="build_view" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/main_updates">
        
        <Preference
	        android:title="@string/main_avail_updates"
	        android:icon="@drawable/cloud"
	        android:key="avail_updates" />
	        
    </PreferenceCategory>

</PreferenceScreen>